2017-07-20  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/elemntry.spad: Don't cache constants in
	Expression(Float)

2017-07-20  Piet van Oostrum  <piet-l@vanoostrum.org>

	* src/lisp/num_gmp.lisp: Fix scope

2017-07-07  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/intlocp.spad: new domain IntegerLocalizedAtPrime

2017-07-07  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fspace.spad: Remove 'paren/box' for lists

2017-07-02  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/coerce.spad: Docfix

2017-06-30  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/algfunc.spad: Fix nthRoot for negative EXPR FLOAT

2017-06-30  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/expr.spad: Do not export 'simplifyPower'

2017-06-30  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/float.spad: Make sure 'x^(1/2) = sqrt(x)'
	in Float

2017-06-29  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/algebra/polycat.spad: generalize PolynomialCategoryLifting

2017-06-10  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/intden.spad, src/algebra/pfr.spad: Clean up
	exports of PartialFraction

2017-06-09  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/intden.spad: Small optimization

2017-06-05  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/acplot.spad, src/algebra/algfact.spad,
	src/algebra/fr.spad, src/algebra/galfact.spad,
	src/algebra/padiclib.spad, src/algebra/pfr.spad,
	src/algebra/twofact.spad:  Cleanup of exports of Factored

2017-06-05  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/constant.spad: Remove InnerAlgebraicNumber
	src/algebra/Makefile.in, src/algebra/exposed.lsp: Adjust

2017-06-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mts.spad: Add few missing functions

2017-05-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gpgcd.spad: Fix another GENPGCD problems

2017-05-30  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/random.spad: Fix and cleanup IntegerBits

2017-05-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
