@@ -66,10 +66,10 @@ Prerequisites:
   On Debian (or Ubuntu) you probably need: libx11-dev, libxt-dev, libice-dev,
   libsm-dev, libxau-dev, libxdmcp-dev, libxpm-dev.
 
-- If using sbcl or Closure CL the '--enable-gmp' option it is available
+- If using sbcl or Clozure CL the '--enable-gmp' option is available
   only if the development version of GMP is installed.  Note: using
-  GMP should work on all sbcl and Closure CL platforms except
-  for Closure CL on Power PC.
+  GMP should work on all sbcl and Clozure CL platforms except
+  for Clozure CL on Power PC.
 
 - Extra libraries needed to have LaTeXed output (ASCII output works
   fine without) in efricas.
@@ -119,8 +119,8 @@ Known problems:
 
 - Some Linux versions, notably SuSe, by default seem to have very small
   limit on virtual memory.  This causes build failure when using sbcl
-  or Closure CL.  Also if limit on virtual memory is too small
-  sbcl-based or Closure CL-based FriCAS binary will silently fail
+  or Clozure CL.  Also if limit on virtual memory is too small
+  sbcl-based or Clozure CL-based FriCAS binary will silently fail
   at startup.  The simplest workaround is to increase limit,
   in the shell typing
 
@@ -314,7 +314,7 @@ contain errors which can crash the whole system.
 
 --------------------------------------------------------
 
-Using GMP with sbcl or Closure CL.
+Using GMP with sbcl or Clozure CL.
 
 Currently on average FriCAS is fastest when compiled using sbcl.
 However, sbcl normally uses its own routines for computations
@@ -326,10 +326,23 @@ manager).  Currently there are two available GMP versions,
 version 5 is much faster than version 4.  Then configure FriCAS
 adding '--enable-gmp' option to the 'configure' arguments.
 
-FriCAS also has support for using GMP with Closure CL.
-Currently Closure CL with GMP works on 32/64 bit Intel/AMD
-processors and ARM (using Closure CL with GMP is not supported
+FriCAS also has support for using GMP with Clozure CL.
+Currently Clozure CL with GMP works on 32/64 bit Intel/AMD
+processors and ARM (using Clozure CL with GMP is not supported
 on Power PC processors).
+
+When you have GMP installed in a non-standard location (this usually
+means anything other than /usr or /usr/local) then you can specify
+the location with the 'configure' argument '--with-gmp=PATH'. This
+supposes that the include file is in 'PATH/include' and libgmp is in
+'PATH/lib'. If you have a different setup, then you can specify
+'--with-gmp-include=INCLUDEPATH --with-gmp-lib=LIBPATH' (specify the
+directories where the include files and libgmp are found,
+respectively).
+
+These options also implicitly set --enable-gmp.  However,
+if --enable-gmp=no is given, then '--with-gmp=...',
+'--with-gmp-include=...' and '--with-gmp-lib=...' is ignored.
 
 --------------------------------------------------------
 
