@@ -1,3 +1,8 @@
+2017-08-05  Piet van Oostrum  <piet-l@vanoostrum.org>
+
+	* configure.ac, src/lib/Makefile.in, src/lisp/Makefile.in:
+	Support GMP in nonstandard location
+
 2017-07-20  Qian Yun  <oldk1331@gmail.com>
 
 	* src/algebra/elemntry.spad: Don't cache constants in
